Fix menu alignment

--- a/css/font.css
+++ b/css/font.css
@@ -41,3 +41,13 @@
 	font-family: "monofur55";
 	src: url("../res/fonts/monof55.ttf");
 	font-style: normal; }
+
+@font-face {
+	font-family: "fixedsys";
+	src: url("../res/fonts/FSEX302.ttf");
+	font-style: normal; }
+
+@font-face {
+	font-family: "unifont";
+	src: url("../res/fonts/unifont-14.0.01.ttf");
+	font-style: normal; }
